@@ -22,6 +22,8 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
+
 require_once(PATH_tslib . 'class.tslib_fe.php');
 require_once(PATH_t3lib . 'class.t3lib_page.php');
 require_once(PATH_t3lib . 'class.t3lib_timetrack.php');
@@ -29,8 +31,6 @@ require_once(PATH_t3lib . 'class.t3lib_tstemplate.php');
 
 require_once(PATH_typo3 . 'sysext/cms/tslib/class.tslib_content.php');
 require_once(PATH_typo3 . 'sysext/lang/lang.php');
-
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
 
 /**
  * Class 'tx_oelib_templatehelper' for the 'oelib' extension
